unicard_types_macro/tests/ui/struct_generic_test.stderr
error: WasmType does not support generics
 --> tests/ui/struct_generic_test.rs:5:15
  |
5 | pub struct Foo<'a> {
  |               ^
