unicard_types_macro/tests/ui/struct_generic_test.rs
pub use unicard_types::*;
use unicard_types_macro::WasmType32 as WasmType;

#[derive(WasmType)]
pub struct Foo<'a> {
    my_str: &'a str
}

fn main() {}